test/parser/unknown-token.delta
// RUN: %check_errors %not %delta -parse %s

// CHECK: [[@LINE+1]]:1: error: unknown token '`'
`
